# aios-core

./: .coderabbit.yaml  .env.backup.1773067434555  .env.example  .eslintcache  .gitignore  .tsbuildinfo  AGENTS.md  BACKUP-GUIDE.md  CHANGELOG.md  CLAUDE-ENHANCED.md  CODE_OF_CONDUCT.md  CONTRIBUTING-PT.md  CONTRIBUTING.md  COPYWRITING-MARKETING-TOOLS-REPORT.md  CUSTOMIZATIONS.md  GITHUB-STRATEGY.md  LICENSE  MIGRATION-PLAN-CLAUDE-RESTRUCTURE.md  PRIVACY.md  PUSH-INSTRUCTIONS.md  QUICK-START-INSTALLATION.sh  README.en.md  README.md  SQUAD-INDEXER-SUMMARY.md  UNIVERSAL-INDEXER.md  UPDATE-TO-V4.md  USAGE-EXAMPLES.md  aios-core-3.10.0.tgz  copywriting-marketing-tools-research-report.json  eslint.config.js  jest.config.js  opencode.json  package-lock.json  package.json  test-sm-greeting.js  testing-infrastructure.ts
tools/hotmart-downloader/: .course-navigation.json  .env.example  .gitignore  .test-lesson-response.json  .test-resolve-results.json  .video-capture-results.json  BATCH-STATUS.md  README.md  batch-download.sh  batch_runner.py  download-all-materials.sh  download-materials.sh  pyproject.toml
tools/hotmart-downloader/src/hotmart_downloader/: __init__.py  __main__.py  api.py  auth.py  cli.py  config.py  console.py  exceptions.py  filesystem.py  http_client.py  logging_config.py  models.py  parser.py  video_resolver.py
tools/hotmart-downloader/tests/: conftest.py  test_filesystem.py  test_models.py  test_parser.py
tools/video-transcriber/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tools/video-transcriber/src/video_transcriber/: __init__.py  audio.py  batch.py  chunker.py  cleaner.py  cli.py  config.py  dashboard.py  downloader.py  logging_config.py  models.py  parsers.py  pipeline.py  transcriber.py  utils.py
tools/video-transcriber/tests/: conftest.py
tools/video-transcriber/tests/integration/: test_cli.py
tools/video-transcriber/tests/security/: test_input_validation.py
tools/video-transcriber/tests/unit/: test_audio.py  test_batch.py  test_chunker.py  test_cleaner.py  test_config.py  (+6 more)
(+4678 files in other folders)
